// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.timeout.contracts;

option java_multiple_files = true;

message TimeoutObtainment {
  Dimension dimension = 1;
  bytes parameters = 2;
}

message Dimension {
  string type = 1;
}
